--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quote Generator</title>
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="/js01_quote_generator/favicon-32x32.png"
+      sizes="32 x 32"
+    />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
     <!-- Font Awesome CDNJS -->
