--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
     />
   </head>
   <body>
+    <div class="quote_container" id="quote_container">
+      <!-- Quote -->
+      <div class="quote_text">
+        <i class="fas fa-quote-left"></i>
+        <span id="quote"></span>
+      </div>
+      <!-- Author -->
+      <div class="quote_author"><span id="author"></span></div>
+      <!-- Buttons -->
+      <div class="button_container">
+        <button class="twitter_button" id="twitter" title="Tweet This!">
+          <i class="fa-brands fa-twitter"></i>
+        </button>
+        <button id="new_quote">New Quote</button>
+      </div>
+    </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- Quote Generator Project -->
     <script src="script.js"></script>
   </body>
